--- a/src/index.css
+++ b/src/index.css
@@ -175,7 +175,7 @@ margin: 5px;
   }
 
   .tele-button {
-    background-image: linear-gradient(45deg, #e96b4b 0%, #F09819  51%, #e96b4b  100%)
+    background-image: linear-gradient(45deg, #e96b4b 0%, #f7a36c  51%, #e96b4b  100%)
    }
    
    .tele-button {
