--- a/src/index.css
+++ b/src/index.css
@@ -600,11 +600,13 @@ color: rgb(240, 240, 240);
 .names > h5{
   margin: 0px !important;
   margin-bottom: 20px !important; 
+font-size: 25px !important;
+
 }
 
-@media only screen and (max-width: 463px) {
+@media only screen and (max-width:580px) {
   .names > h5{
-max-width: 100px;
+max-width: 130px;
   }
 }
 
