--- a/src/index.css
+++ b/src/index.css
@@ -103,12 +103,12 @@ p {margin-bottom: 1rem ;
 @media screen and (min-width:1400px) {
   .nav-logo{
 
-  
   font-size: 28px !important;
 }}
 
 .nav-logo{
-padding-right: 3vw;
+  font-weight: 400;
+padding-right: 2vw;
 margin-top: 15px !important;
 margin-bottom: 15px;
 white-space: nowrap;
@@ -551,6 +551,14 @@ color: #e96b4b;
     border-radius: 25px;
 
   }
+  .spec-container{
+    padding: 50px;
+
+  }
+
+  .spec-text-container{
+    border-radius: 25px;
+  }
 }
 
 .mobileimg{
@@ -627,8 +635,6 @@ li{
 padding-left: 20px;
 padding-right: 20px;
 box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
-
-
 }
 
 
@@ -654,3 +660,32 @@ box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30p
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
   }
+
+  .spec-container{
+    background-color: var(--background-color);
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 50px;
+    padding-top: 10px;
+    justify-content: space-around;
+
+  }
+
+  .spec-text-container{
+  display: flex;
+  white-space: pre-wrap;
+  padding: 10px 30px 10px 30px;
+  max-width: 550px;
+  background-image: linear-gradient(to bottom left, #3a93d7, #1965a2);
+  color: white;
+
+
+  }
+
+
+  .center-flex-box{
+    display: flex;
+    justify-content: center;
+    padding: 0;
+  }
+
