--- a/src/index.css
+++ b/src/index.css
@@ -29,11 +29,6 @@ p {margin-bottom: 1rem ;
 
   font-size: 1.5rem }
   
-  @media only screen and (max-width: 400px) {
-    p {
-        font-size: 0.9rem !important
-    }
-  }
 
 
   
@@ -403,6 +398,9 @@ background-color: #f7f7f9;
    background-size: 150px;
   background-repeat: no-repeat;
   background-position: 80% 10%,45% 96%;
+  position: relative;
+  z-index: 100;
+  box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
 }
 
 @media only screen and (max-width: 700px) {
@@ -470,9 +468,7 @@ padding-top: 20px;
     padding-right: 5px !important;
     margin-right: 5px;
   }
-  .bigTitle{
 
-  }
 }
 
 @media only screen and (max-width: 500px) {
@@ -553,13 +549,19 @@ color: #e96b4b;
   }
   .spec-container{
     padding: 50px;
-
   }
 
   .spec-text-container{
     border-radius: 25px;
   }
 }
+.spec-container{
+  background-image: url("images/paper-texture.webp"),url("images/ring.svg");
+  background-repeat: no-repeat;
+  background-position: 0 0,111% 140%;
+  background-size: 100%,25%;
+}
+
 
 .mobileimg{
   padding-bottom: 40px;
@@ -628,8 +630,10 @@ li{
 
 .Footer{
   display: flex;
+  flex-direction: column;
   justify-content: center;
-  background-color: #0f68b4 ;
+  align-items: center;
+  background-color: #1e71b6 ;
   min-height: 50px;
   color: white;
 padding-left: 20px;
@@ -682,10 +686,63 @@ box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30p
 
   }
 
+.card-container{
+  display: flex;
+  flex-direction: column;
+box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+  background-color: #fafafa;
+  max-width: 200px;
+  height: 275px;
+  border-radius: 10px;
+  color: #4b4b4b;
+}
 
-  .center-flex-box{
+.card-words{
+  text-align: center;
+  font-size: 16px;
+  display: flex;
+  justify-content: center;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+.card-img{
+  border-top-left-radius:  10px; 
+  border-top-right-radius:  10px; 
+}
+
+.text-container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height:75px !important
+}
+
+.center-grid-box{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  gap: 60px;
+  margin: auto;
+  
+}
+
+
+@media only screen and (max-width:1400px) {
+  .center-grid-box{
     display: flex;
-    justify-content: center;
-    padding: 0;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    padding-left: 20px;
+    padding-right: 20px;
+      }
+
+}
+
+@media only screen and (max-width:820px) {
+
+  .footer-logo{
+    width: 95vw;
   }
+  
+}
 
