--- a/src/index.css
+++ b/src/index.css
@@ -102,6 +102,7 @@ p {margin-bottom: 1rem ;
 }}
 
 .nav-logo{
+  letter-spacing: 1px;
   font-weight: 400;
 padding-right: 2vw;
 margin-top: 15px !important;
